prez: Fix broken https://www.vorburger.ch/LearningMachineLearning/prez/sli.dev/dist/png.html
See https://github.com/slidevjs/slidev/issues/1874.

--- a/docs/prez/sli.dev/build
+++ b/docs/prez/sli.dev/build
@@ -13,5 +13,10 @@ if [ ! -f /usr/local/share/fonts/NotoColorEmoji.ttf ]; then
 fi
 
 npm run export-md-png
+# https://github.com/slidevjs/slidev/issues/1874
+mv slides-export.md dist/png.md
+mv slides-export dist/
+# Just to avoid breaking existing links, e.g. in https://github.com/slidevjs/docs/pull/188
+ln -s slides-export dist/png
 
 npm run export-pdf
